--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "daisyui": "^2.24.0"
+        "daisyui": "^2.24.0",
+        "vue-debounce": "^4.0.0"
     }
 }
